fix: display google adsense on small screen

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -455,4 +455,8 @@ blockquote {
     .site-header__title {
         font-size: 48px;
     }
+
+    .widget--none {
+        display: none;
+    }
 }
